Fix HTTP Header Config